dark mode pending

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,6 +1,10 @@
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap");
 
+.white-content {
+  background: #e4e4e4;
+}
+
 /*===== VARIABLES CSS =====*/
 :root {
   --header-height: 3rem;
